Closed Bug 1265970 Opened 8 years ago Closed 8 years ago

XMLHttpRequest open() should throw an InvalidStateError when the document is not active

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

(Whiteboard: btpp-active)

Attachments

(1 file)

We throw an exception, but it's some random XPConnect thing.
Attachment #8743276 - Flags: review?(bugs) → review+
Whiteboard: btpp-active
https://hg.mozilla.org/mozilla-central/rev/408ac64b72ed
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.