Bug 1265970.  When throwing an exception from XHR open() due to not being in an active document, make sure it's an InvalidStateError.  r=smaug